--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,7 +14,7 @@ services:
      - ${ANSIBLE_HOME}/shared:/shared
      - ${ANSIBLE_HOME}/ubuntu-c/ansible:/home/ansible
      - ${ANSIBLE_HOME}/ubuntu-c/root:/root
-     - ./Tools/:/home/ansible/Tools
+     - ${TOOLS}:/Tools
     networks:
      - diveinto.io
 
@@ -152,6 +152,8 @@ services:
      - "1000:80"
     networks:
      - diveinto.io
+volumes:
+   Tools:
 
 networks:
   diveinto.io:
